--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.3.1",
     "react-addons-update": "^15.6.2",
     "react-native": "0.55.3",
+    "react-native-android-permissions": "^1.0.2",
     "react-native-animatable": "^1.2.4",
     "react-native-maps": "^0.21.0",
     "react-native-router-flux": "^4.0.0-beta.28",
