--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
     compile project(':react-native-android-permissions')
     
     implementation(project(':react-native-maps')){
@@ -147,7 +148,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:10.2.4'
 
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.android.support:appcompat-v7:23.4.0"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
