--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-animatable": "^1.2.4",
     "react-native-maps": "^0.21.0",
     "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-splash-screen": "^3.0.6",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
